objects/BasePriceTable__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>PriceCap__c</fullName>
        <label>Price Cap</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierCostPercent__c</fullName>
        <label>Tier Cost %</label>
        <precision>6</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierPriceEnd__c</fullName>
        <label>Tier Price End</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierPriceStart__c</fullName>
        <label>Tier Price Start</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BasePriceTable</label>
</CustomObject>